src/objects/MICO_Test_Templates__c.object
<CustomObject>
    <description>Business Description: This object is used by a Test Manager or Test Script Writer to create a master test script. This master test script can then be copied to different users to execute by adding those users to the &quot;Testers&quot; related list.

Used In: Mission Control App</description>
    <fields>
        <fullName>Development_Stage__c</fullName>
        <formula>Text(User_Story__r.Development_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <inlineHelpText>The expected result of this test</inlineHelpText>
        <label>Expected Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <inlineHelpText>The introduction to this test script. This will be shown to testers before they start executing the test.</inlineHelpText>
        <label>Introduction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>User_Story__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <formula>User_Story__r.Allocated_Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>The title of the test script</inlineHelpText>
        <label>Test Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USerSToryDescription__c</fullName>
        <formula>User_Story__r.Full_User_Story__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>MICO_User_Story__c</referenceTo>
        <relationshipName>MICO_Test_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Script</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Project__c</columns>
        <columns>Sprint__c</columns>
        <columns>User_Story__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Test Script Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>